--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 
 <link rel="stylesheet" type="text/css" href="css/estilos.css">
 
+    <link href="https://fonts.googleapis.com/css?family=Spartan&display=swap" rel="stylesheet"> 
+
+    
 <script>
+
+
 
 function loadJSON(path, success, error)
 {
@@ -34,22 +39,25 @@ loadJSON('api/gradiAuthors.json',
          	console.log(data[2]);
          	*/
 
-         	var data02 = data[2].id
 
-         	console.log();
-
+   var contenido = document.getElementById("contenido");
 
          	for (var i = 0; i < data.length; i++) {
-			   console.log(data[i].id);
+			   
+                /*Se prueba que se cargan los contenidos en console*/
+               console.log(data[i].id);
 			   console.log(data[i].author);
 			   console.log(data[i].width);
 			   console.log(data[i].height);
 			   console.log(data[i].url);
 			   console.log(data[i].download_url);
 
-
-
+               // Contenidos del diV con imágenes
 				var e = document.createElement('div');
+                var fondoVerde = document.createElement('div');
+                fondoVerde.classList.add("fondo-verde");
+
+
                 var id = document.createTextNode(data[i].id);
                 var author = document.createTextNode(data[i].author);
                 var width = document.createTextNode(data[i].width);
@@ -58,18 +66,15 @@ loadJSON('api/gradiAuthors.json',
 
 				e.classList.add("imagenes");
 				e.style.backgroundImage = "url('" + data[i].download_url + ".jpg')"; 
-                e.appendChild(id);
-                e.appendChild(author);
-                e.appendChild(width);
-                e.appendChild(height);
-                e.appendChild(url);
+                fondoVerde.appendChild(id);
+                fondoVerde.appendChild(author);
+                fondoVerde.appendChild(width);
+                fondoVerde.appendChild(height);
+                fondoVerde.appendChild(url);
+                e.appendChild(fondoVerde);
 
 
-
-
-
-			   var ids= data[i].id;
-				document.body.insertBefore(e, document.body.childNodes[i]);
+				contenido.appendChild(e, document.body.childNodes[i]);
 
 			/*
 			   document.getElementById('contenido').innerHTML = '<ol><li>html data</li></ol>' + i;
@@ -92,9 +97,13 @@ loadJSON('api/gradiAuthors.json',
 </head>
 <body>
 
+<center>
+<img src="assets/img/logo-full.png">
+</center>
+
 <div id="contenedor">
 	
-	<div id="contenido">Hola Mundo</div>
+	<div id="contenido"></div>
 
 
 </div>
